# simple_raytracer

./: CMakeLists.txt  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Tracer.cpp  Tracer.h  main.cpp
math/: Util.h  Vector.cpp  Vector.h
physics/: Light.cpp  Light.h  Ray.cpp  Ray.h
primitives/: Plane.cpp  Plane.h  Primitive.h  Sphere.cpp  Sphere.h
